--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -1,9 +1,5 @@
 \chapter{Propositional Classical Logic}
 
-\newcommand{\SKS}{\mathsf{SKS}}
-
-\section{System $\SKS$}
-
 \newcommand{\fff}{\mathsf f}
 \newcommand{\ttt}{\mathsf t}
 %---------------------------------------
@@ -37,6 +33,8 @@ Negation is only defined for atoms, which is not a limitation thanks to De Morga
 \newcommand{\unand}{=_{\wedge\mathsf{u}}}
 \newcommand{\idor }{=_{\vee\mathsf{i}}}
 \newcommand{\idand}{=_{\wedge\mathsf{i}}}
+
+\newcommand{\SKS}{\mathsf{SKS}}
 
 \begin{definition}
 System $\SKS$ is defined by the following \emph{structural} rules:
@@ -231,3 +229,681 @@ Finally, we show the inductive case, $n>2$:
 \begin{remark}\label{RemGenericContraction}
 In the non-atomic version of system $\SKS$ the derivations shown in Lemma~\ref{LemGenericContraction} correspond to repeated applications of (co)contractions. For this reason we sometimes write the inference rules $\vlinf{n\cdot\cod}{}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlinf{n\cdot\cou}{}{\bigwedge_{i=1}^{n}\alpha}{\alpha}$ instead of the derivations $\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$, respectively.
 \end{remark}
+
+\TODO{Make some comments about how the next subsection will both serve as an introduction to many deep inference techniques as well as prepare definitions for later use.}
+
+\TODO{Integrate this section better.}
+
+\TODO{Check that is the most up-to-date relative to the submitted paper.}
+
+%===============================================================================
+\subsection{Threshold Formulae}\label{SectThresh}
+
+\newcommand{\Gammasf}{\mathsf\Gamma}
+We present here the main construction of this paper, \emph{i.e.}, a class of derivations $\Gammasf$ that only depend on a given set of atoms and that allow us to normalise any proof containing those atoms. The complexity of the $\Gammasf$ derivations dominates the complexity of the normal proof, and is due to the complexity of certain `threshold formulae', on which the $\Gammasf$ derivations are based. The $\Gammasf$ derivations are constructed in Definition~\ref{DefThrDer}; this directly leads to Theorem~\ref{TheoThrDer}, which states a crucial property of the $\Gammasf$ derivations and which is the main result of this section.
+
+Threshold formulae realise boolean threshold functions, which are defined as boolean functions that are true if and only if at least $k$ of $n$ inputs are true (see \cite{Wege:87:The-Comp:vn} for a thorough reference on threshold functions). 
+
+In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $n\le x$.
+
+There are several ways of encoding threshold functions into formulae, and the problem is to find, among them, an encoding that allows us to obtain Theorem~\ref{TheoThrDer}. Efficiently obtaining the property stated in Theorem~\ref{TheoThrDer} crucially depends also on the proof system we adopt.
+
+The following class of threshold formulae, which we found to work for system $\SKS$, is a simplification of the one adopted in \cite{AtseGalePudl:02:Monotone:yu}.
+
+\renewcommand{\th}[2]{\mathop{\thetaup_{#1}^{#2}}}
+%-------------------------------------------------------------------------------
+\begin{definition}
+Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$, and let $p=\lfloor n/2\rfloor$ and $q=n-p$; for $k\ge0$, we define the \emph{threshold formulae\/} $\th kn\avec1n$ as follows:
+\begin{itemize}
+%---------------------------------------
+\item for any $n>0$ let $\th0n\avec1n\equiv\ttt$;
+%---------------------------------------
+\item for any $n>0$ and $k>n$ let $\th kn\avec1n\equiv\fff$;
+%---------------------------------------
+\item $\th11(a_1)\equiv a_1$;
+%---------------------------------------
+\item for any $n>1$ and $0<k\le n$ let
+$\th kn\avec1n\equiv\bigvee_{\begin{subarray}{l}i+j=k      \\ 
+                                                0\le i\le p\\ 
+                                                0\le j\le q
+                             \end{subarray}}
+\vlsbr(\th ip\avec1p.\th jq\avec{p+1}n)$.
+%---------------------------------------
+\end{itemize}
+\end{definition}
+
+See, in Figure~\ref{FigThrEx}, some examples of threshold formulae.
+
+The only reason why we require atoms to be distinct in threshold formulae is to avoid certain technical problems with substitutions in the definition of cut-free form, later on. However, there is no substantial difficulty in relaxing this definition to any set of atoms.
+
+%-------------------------------------------------------------------------------
+\begin{figure}
+\vlsmallbrackets
+\begin{eqnarray*}
+%---------------------------------------
+\th02(a,b)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th12(a,b)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th01(b)}).
+                       ({\vlnos\th01(a)}.{\vlnos\th11(b)})]
+           \equiv     [(a.\ttt).(\ttt.b)]\\
+          &=     &\vls [a      .      b ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th22(a,b)&\equiv&\vls({\vlnos\th11(a)}.{\vlnos\th11(b)})\\
+          &\equiv&\vls(a.b)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th03(a,b,c)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th13(a,b,c)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th02(b,c)}).
+                         ({\vlnos\th01(a)}.{\vlnos\th12(b,c)})]
+             \equiv     [(a.\ttt).(\ttt.[(b.\ttt).(\ttt.c)])]\\
+            &=     &\vls[a.b.c]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th23(a,b,c)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th12(b,c)}).
+                    ({\vlnos\th01(a)}.{\vlnos\th22(b,c)})]\\
+            &=     &\vls[(a.[b.c]).(b.c)]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th33(a,b,c)&\equiv&\vls({\vlnos\th11(a)}.{\vlnos\th22(b,c)})
+             \equiv     [(a.(b.c))]\\
+            &=     &\vls(a.b.c)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th05(a,b,c,d,e)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th15(a,b,c,d,e)&\equiv&\vls[({\vlnos\th12(a,b)}.{\vlnos\th03(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th13(c,d,e)})]\\
+                &=     &\vls[a.b.c.d.e]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th25(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th03(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th13(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th23(c,d,e)})]\\
+                &=     &\vls[(a.b                                    ).
+                             ([a.b]             .[c.d.e]             ).
+                                                 (c.[d.e]).(d.e)      ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th35(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th13(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th23(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th33(c,d,e)})]\\
+                &=     &\vls[(a.b               .[c.d.e]             ).
+                             ([a.b]             .[(c.[d.e]).(d.e)]   ).
+                                                 (c.d.e)              ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th45(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th23(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th33(c,d,e)})]\\
+                &=     &\vls[(a.b               .[(c.[d.e]).(d.e)]   ).
+                             ([a.b]             .c.d.e               )]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th55(a,b,c,d,e)&\equiv&\vls({\vlnos\th22(a,b)}.{\vlnos\th33(c,d,e)})\\
+                &=     &\vls(a.b.c.d.e)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th65(a,b,c,d,e)&\equiv&\fff
+\quad.
+\end{eqnarray*}
+\caption{Examples of threshold formulae.}
+\label{FigThrEx}
+\end{figure}
+
+The formulae for threshold functions adopted in \cite{AtseGalePudl:02:Monotone:yu} correspond, for each choice of $k$ and $n$, to $\bigvee_{i\ge k}\th in\avec1n$. We presume that \cite{AtseGalePudl:02:Monotone:yu} employs these more complicated formulae because the formalism adopted there, the sequent calculus, is less flexible than deep inference, requiring more information in threshold formulae in order to construct suitable derivations.
+
+%-------------------------------------------------------------------------------
+\begin{remark}
+For $n>0$, we have $\th1n\avec1n=\vls[a_1.\vldots.a_n]$ and $\th nn\avec1n=\vls(a_1.\vldots.a_n)$.
+\end{remark}
+
+The size of the threshold formulae dominates the cost of the normalisation procedure, so, we evaluate their size. We leave as an exercise the proof of the following proposition.
+
+%-------------------------------------------------------------------------------
+\begin{proposition}\label{PropQuasAux}
+For any $n>0$ and $k\ge0$, $\size{\th kn\avec1n}\le\size{\th{\lfloor n/2\rfloor+1}n\avec1n}$.
+\end{proposition}
+
+%-------------------------------------------------------------------------------
+\begin{lemma}\label{LemmaQuas}
+The size of\/ $\th{\lfloor n/2\rfloor+1}n\avec1n$ is $n^{\Ord{\log n}}$.
+\end{lemma}
+
+%-------------------------------------------------------------------------------
+\begin{proof}
+Observe that $\size{\th kn\avec1n}\le\size{\th k{n+1}\avec1{n+1}}$. Let $p=\lfloor n/2\rfloor$ and $q=n-p$ and consider:
+\begin{equation}\label{PropQuasIneq}
+\begin{split}
+\size{\th{p+1}n\avec1n}
+&=\textstyle\sum_{\begin{subarray}{l}i+j=p+1    \\
+                                     0\le i\le p\\
+                                     0\le j\le q
+                  \end{subarray}}
+  \left(\size{\th ip\avec1p}+
+        \size{\th jq\avec{p+1}n}\right)             \\
+&\le\textstyle\sum_{\begin{subarray}{l}i+j=p+1\\
+                                       0\le i,j\le q
+                    \end{subarray}}
+  \left(\size{\th iq\avec1q}+
+        \size{\th jq\avec1q}\right)                 \\
+&\le2(q+1)
+  \size{\th{\lfloor q/2\rfloor+1}q\avec1q}\quad,
+\end{split}
+\end{equation}
+where we use Proposition~\ref{PropQuasAux}. We show that, for $h=2/(\log3-\log2)$ and for any $n>0$, we have $\size{\th{\lfloor n/2\rfloor+1}n\avec1n}\le n^{h\log n}$. We reason by induction on $n$; the case $n=1$ trivially holds. By the inequality~\eqref{PropQuasIneq}, and for $n>1$, we have
+\begin{equation*}
+\begin{split}
+\size{\th{\lfloor n/2\rfloor+1}n\avec1n}
+&\le2(n-\lfloor n/2\rfloor+1)
+     (n-\lfloor n/2\rfloor)^{h\log(n-\lfloor n/2\rfloor)}       \\
+&\le n^2n^{h\log(2n/3)}=n^{h\log n-h(\log3-\log2)+2}=n^{h\log n}
+\quad.
+\end{split}
+\end{equation*}
+\end{proof}
+
+%-------------------------------------------------------------------------------
+\begin{theorem}\label{TheoQuas}
+For any $k\ge0$ the size of\/ $\th kn\avec1n$ is $n^{\Ord{\log n}}$.
+\end{theorem}
+
+%-------------------------------------------------------------------------------
+\begin{proof}
+It immediately follows from Proposition~\ref{PropQuasAux} and Lemma~\ref{LemmaQuas}.
+\end{proof}
+
+Given a threshold formula $\th kn\avec1n$, we can consider, for each $a_l$ such that $1\le l\le n$, the formulae $(\th kn\avec1n)\{a_l/\fff\}$ and $(\th{k+1}n\avec1n)\{a_l/\ttt\}$: we call both of them, informally, `pseudocomplements' of $a_l$. The reason for this name is that we can manage to replace, in a given proof, all occurrences of those $\bar a_l$ that appear in cut instances with the pseudocomplements of $a_l$. The cut instances and their corresponding identity instances are then removed, leaving us with derivations whose premiss and conclusion contain each a threshold formula. Moreover, the $k$-level of the threshold formula in the premiss is one less than the $k$-level of the threshold formula in the conclusion. This way, we obtain several derivations, corresponding to increasing values of $k$, that we are able to stitch together until we get a normalised proof.
+
+All this, of course, needs clarification, but we think that it is helpful to provide a summary here of the main constructions that allow for this stitching operation. Let us read derivations top-down; the following are the steps that we need to perform, for $0\le k\le n$.
+\begin{enumerate}
+%---------------------------------------
+\item\label{ItemOne} Build
+\[
+\vlder{}{}{\vlsmallbrackets\vls[a_l.(\th kn\avec1n)\{a_l/\fff\}]}
+          {\th kn\avec1n}
+\quad,
+\]
+\emph{i.e.}, create, from a $k$-level threshold formula, a disjunction between $a_l$ and its pseudocomplement $(\th kn\avec1n)\{a_l/\fff\}$ (Proposition~\ref{PropAuxNorm}); then replace the pseudocomplement into $\bar a_l$, for each identity instance.
+%---------------------------------------
+\item\label{ItemTwo} Increase the $k$-level by using the derivations
+\[
+\vlder{}{}{(\th{k+1}n\avec1n)\{a_l/\ttt\}}
+          {(\th kn\avec1n)\{a_l/\fff\}}
+\]
+(Theorem~\ref{TheoThrDer}); these are the $\Gammasf$ derivations mentioned in the introduction to this section.
+%---------------------------------------
+\item\label{ItemThree} For each cut instance, collect the conjunction between $a_l$ and its pseudocomplement $(\th{k+1}n\avec1n)\{a_l/\ttt\}$; then build
+\[
+\vlder{}{}{\th{k+1}n\avec1n}
+          {\vlsmallbrackets\vls(a_l.(\th{k+1}n\avec1n)\{a_l/\ttt\})}
+\quad,
+\]
+\emph{i.e.}, create a $(k+1)$-level threshold formula (Proposition~\ref{PropAuxNorm}).
+%---------------------------------------
+\end{enumerate}
+The derivations mentioned above do not require any use of identity and cut, and allow us to move, in $n+1$ steps, from $\th 0n\avec1n\equiv\ttt$ to $\th{n+1}n\avec1n\equiv\fff$, which is the secret to success. The constructions in~\ref{ItemOne} and \ref{ItemThree} are deep-inference routine and introduce low complexity. We deal now with the crucial step~\ref{ItemTwo}, by designing Definition~\ref{DefThrDer}, and then checking it carefully, so as to get the property stated in Theorem~\ref{TheoThrDer}.
+
+Definition~\ref{DefThrDer} is technical, but its philosophy is simple; all one has to do to build the derivations is to
+\begin{itemize}
+ \item identify the atom occurrences in the premiss that do not occur in the conclusion and remove them using coweakenings and
+ \item identify the atom occurrences in the conclusion that do not occur in the premiss and add them using weakenings.
+\end{itemize}
+Adding and removing atom occurrences deep inside a formula in this way is greatly simplified by the fact that we are using deep inference.
+
+In order to be certain of its correctness, we have implemented it as a program \cite{Gugl:09:th.pl:rz}. The presentation could be slightly simplified, but we prefer it this way because this exactly corresponds to the implementation. It can be useful to read the definition together with the examples in Figures~\ref{FigPThEx} and \ref{FigThrEx}, which have been generated by the program, and by keeping in mind that the goal is to obtain the property stated in Theorem~\ref{TheoThrDer}.
+
+\newcommand{\Gth}[3]{\mathop{\Gammasf_{#1,#2}^{#3}}}
+%-------------------------------------------------------------------------------
+\begin{figure}
+\begin{eqnarray*}
+%---------------------------------------
+\Gth 015\avecletter&=&
+\vls [\ttt.\vlderivation{
+\vlin{}{}{b}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{\vls [c.d.e]}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 115\avecletter&=&
+\vls [b.([\ttt.\vlderivation{
+\vlin{}{}{b}{
+\vlhy{\vls \fff}
+}}
+].[c.d.e]).\vlderivation{
+\vlin{}{}{\vls [(c.[d.e]).(d.e)]}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 215\avecletter&=&
+\vls [(b.[c.d.e]).([\ttt.\vlderivation{
+\vlin{}{}{b}{
+\vlhy{\vls \fff}
+}}
+].[(c.[d.e]).(d.e)]).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.b)}
+}}
+.\vlderivation{
+\vlin{}{}{\vls (c.d.e)}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 315\avecletter&=&
+\vls [(b.[(c.[d.e]).(d.e)]).([\ttt.\vlderivation{
+\vlin{}{}{b}{
+\vlhy{\vls \fff}
+}}
+].c.d.e).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.b.[c.d.e])}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 415\avecletter&=&
+\vls [(b.c.d.e).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.b.[(c.[d.e]).(d.e)])}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 515\avecletter&=&
+\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.b.c.d.e)}
+}}
+\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 035\avecletter&=&
+\vls [\ttt.\vlderivation{
+\vlin{}{}{\vls [d.e]}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{\vls [a.b]}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 135\avecletter&=&
+\vls [([a.b].[\ttt.\vlderivation{
+\vlin{}{}{\vls [d.e]}{
+\vlhy{\vls \fff}
+}}
+]).d.e.\vlderivation{
+\vlin{}{}{\vls (d.e)}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{\vls (a.b)}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 235\avecletter&=&
+\vls [(a.b.[\ttt.\vlderivation{
+\vlin{}{}{\vls [d.e]}{
+\vlhy{\vls \fff}
+}}
+]).([a.b].[d.e.\vlderivation{
+\vlin{}{}{\vls (d.e)}{
+\vlhy{\vls \fff}
+}}
+]).(d.e).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.[d.e])}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 335\avecletter&=&
+\vls [(a.b.[d.e.\vlderivation{
+\vlin{}{}{\vls (d.e)}{
+\vlhy{\vls \fff}
+}}
+]).([a.b].[(d.e).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.[d.e])}
+}}
+]).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.d.e)}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 435\avecletter&=&
+\vls [(a.b.[(d.e).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (\fff.[d.e])}
+}}
+]).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls ([a.b].\fff.d.e)}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 535\avecletter&=&
+\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (a.b.\fff.d.e)}
+}}\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 055\avecletter&=&
+\vls [\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{c}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{\vls [a.b]}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 155\avecletter&=&
+\vls [([a.b].[\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{c}{
+\vlhy{\vls \fff}
+}}
+]).(c.[\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+]).d.\vlderivation{
+\vlin{}{}{\vls (a.b)}{
+\vlhy{\vls \fff}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 255\avecletter&=&
+\vls [(a.b.[\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+.\vlderivation{
+\vlin{}{}{c}{
+\vlhy{\vls \fff}
+}}
+]).([a.b].[(c.[\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+]).d]).(c.d).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (d.\fff)}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 355\avecletter&=&
+\vls [(a.b.[(c.[\ttt.\vlderivation{
+\vlin{}{}{d}{
+\vlhy{\vls \fff}
+}}
+]).d]).([a.b].[(c.d).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (d.\fff)}
+}}
+]).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (c.d.\fff)}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 455\avecletter&=&
+\vls [(a.b.[(c.d).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (d.\fff)}
+}}
+]).\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls ([a.b].c.d.\fff)}
+}}
+]\quad,\\
+\noalign{\smallskip}
+%---------------------------------------
+\Gth 555\avecletter&=&
+\vlderivation{
+\vlin{}{}{\vls \fff}{
+\vlhy{\vls (a.b.c.d.\fff)}
+}}\quad.
+\end{eqnarray*}
+\caption{Examples of $\Gth kl5\avecletter$, where $\avecletter=(a,b,c,d,e)$.}
+\label{FigPThEx}
+\end{figure}
+
+\TODO{Define generic weakening.}
+
+%-------------------------------------------------------------------------------
+\begin{remark}
+Given $n>1$, let $p=\lfloor n/2\rfloor$ and $q=n-p$. For $0\le k\le q$ and $1\le l\le p$, the following derivation is well defined:
+\[
+\vlinf{\gwu}
+      {}
+      {\fff}
+      {\vls({\vlnos(\th pp\avec1p)}\{a_l/\fff\}.\th kq\avec{p+1}n)}
+=
+\vls(
+\vlinf{\gwu}
+      {}
+      {\vls(\ttt)}
+      {\vls(a_1.\cdots.a_{l-1}.a_{l+1}.\cdots.a_p.\th kq\avec{p+1}n)}
+.\fff)
+\quad.
+\]
+Analogously, for $0\le k\le p$ and $p+1\le l\le n$, we can define the following derivation:
+\[
+\vlinf{\gwu}
+      {}
+      {\fff}
+      {\vls(\th kp\avec1p.{\vlnos(\th qq\avec{p+1}n)}\{a_l/\fff\})}
+=
+\vls(
+\vlinf{\gwu}
+      {}
+      {\vls(\ttt)}
+      {\vls(\th kp\avec1p.a_{p+1}.\cdots.a_{l-1}.a_{l+1}.\cdots.a_n)}
+.\fff)
+\quad.
+\]
+Both classes of derivations are used in Definition~\ref{DefThrDer}.
+\end{remark}
+
+\newcommand{\Uth}[3]{\mathop{\mathsf\Upsilon_{#1,#2}^{#3}}}
+\newcommand{\Dth}[3]{\mathop{\mathsf\Delta_{#1,#2}^{#3}}}
+%-------------------------------------------------------------------------------
+\begin{definition}\label{DefThrDer}
+Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$, and let $p=\lfloor n/2\rfloor$ and $q=n-p$.
+\begin{itemize}
+%---------------------------------------
+%---------------------------------------
+\item
+For $n>1$ and $1\le l\le n$, we define the derivations $\Uth kln\avec1n$ and $\Dth kln\avec1n$ as follows:
+\[
+\Uth kln\avec1n=\begin{cases}
+\vlinf{\gwu}
+      {}
+      {\fff}
+      {\vls({\vlnos(\th pp\avec1p)}\{a_l/\fff\}.\th{k-p}q\avec{p+1}n)}
+             &\text{if $p\le k\le n$ and $l\le p$}\\
+\noalign{\medskip}
+\vlinf{\gwu}
+      {}
+      {\fff}
+      {\vls(\th{k-q}p\avec1p.{\vlnos(\th qq\avec{p+1}n)}\{a_l/\fff\})}
+             &\text{if $q\le k\le n$ and $p<l$}\\
+\noalign{\medskip}
+\fff         &\text{otherwise}
+              \end{cases}
+\]
+and
+\[
+\Dth kln\avec1n=\begin{cases}
+\vlinf{\gwd}
+      {}
+      {\th kq\avec{p+1}n}
+      {\fff}
+             &\text{if $0<k\le q$ and $l\le p$}\\
+\noalign{\medskip}
+\vlinf{\gwd}
+      {}
+      {\th kp\avec1p}
+      {\fff}
+             &\text{if $0<k\le p$ and $p<l$}\\
+\noalign{\medskip}
+\fff         &\text{otherwise}
+              \end{cases}\quad.
+\]
+%---------------------------------------
+%---------------------------------------
+\item
+For $k\ge0$ and $1\le l\le n$, we define the derivations $\vlsmash{\Gth kln\avec1n}$, recursively on $n$, as follows:
+\begin{itemize}
+%---------------------------------------
+\item $\Gth 011(a_1)=\ttt$;
+%---------------------------------------
+\item for $k>0$, $\Gth k11(a_1)=\fff$;
+%---------------------------------------
+\item for $k>n$, $\Gth kln\avec1n=\fff$;
+%---------------------------------------
+\item for $n>1$ and $k\le n$, let
+\[
+\Gth kln\avec1n=\begin{cases}
+%---------------------------------------
+\vls[
+\bigvee_{\begin{subarray}{l}i+j=k      \\ 
+                            0\le i<p   \\ 
+                            0\le j\le q
+         \end{subarray}}(
+\Gth ilp\avec1p.
+\th jq\avec{p+1}n).
+\Uth kln\avec1n.\Dth{k+1}ln\avec1n]
+&\text{if $l\le p$}\\
+\noalign{\medskip}
+%---------------------------------------
+\vls[
+\bigvee_{\begin{subarray}{l}i+j=k      \\
+                            0\le i\le p\\ 
+                            0\le j<q
+         \end{subarray}}(
+\th ip\avec1p.
+\Gth j{l-p}q\avec{p+1}n).
+\Uth kln\avec1n.\Dth{k+1}ln\avec1n]
+&\text{if $p<l$}
+\end{cases}
+\quad.
+\]
+%---------------------------------------
+\end{itemize}
+%---------------------------------------
+%---------------------------------------
+\end{itemize}
+\end{definition}
+
+%-------------------------------------------------------------------------------
+\begin{example}
+See, in Figure~\ref{FigPThEx}, some example of derivations $\vlsmash{\Gth kln\avec1n}$. Note that, for clarity, we removed all instances of the trivial derivations $\Uth112\avec12=\Uth122\avec12=\Uth113\avec13=\vldownsmash{\vlinf\gwu{}\fff\fff}$. We can do so because these derivation instances appear as disjuncts.
+\end{example}
+
+%-------------------------------------------------------------------------------
+\begin{theorem}\label{TheoThrDer}
+For any $n>0$, $k\ge0$ and\/ $1\le l\le n$, the derivation\/ $\vlsmash{\Gth kln\avec1n}$ has shape
+\[
+\vlder{}{\{\awd,\awu\}}{(\th{k+1}n\avec1n)\{a_l/\ttt\}}
+                       {(\th kn\avec1n)\{a_l/\fff\}}
+\quad,
+\]
+and\/ $\size{\Gth kln\avec1n}$ is $n^{\Ord{\log n}}$.
+\end{theorem}
+
+%-------------------------------------------------------------------------------
+\begin{proof}
+The shape of $\Gth kln\avec1n$ can be verified by inspecting Definition~\ref{DefThrDer}. For example, this is the case when $n>1$ and $l\le p\le k<q$, where $p=\lfloor n/2\rfloor$ and $q=n-p$:
+\vlstore{\noalign{\medskip}
+\vls[
+\textstyle\bigvee_{\begin{subarray}{l}i+j=k      \\
+                                      0\le i<p   \\
+                                      0\le j\le q
+                   \end{subarray}}(
+\vlder{\Gth ilp\avec1p}
+      {}
+      {(\th{i+1}p\avec1p)\{a_l/\ttt\}}
+      {(\th ip\avec1p)\{a_l/\fff\}}
+.
+\th jq\avec{p+1}n)
+.
+\vlinf{\gwu}
+      {}
+      {\fff}
+      {\vls({\vlnos(\th pp\avec1p)}\{a_l/\fff\}.\th{k-p}q\avec{p+1}n)}
+.
+\vlinf{\gwd}
+      {}
+      {\th{k+1}q\avec{p+1}n}
+      {\fff}
+]}
+\begin{multline*}
+\vlder{\Gth kln\avec1n}
+      {}
+      {(\th{k+1}n\avec1n)\{a_l/\ttt\}}
+      {(\th kn\avec1n)\{a_l/\fff\}}
+={}\\
+\vlread
+\quad.
+\end{multline*}
+(Remember that
+\[
+\th kn\avec1n\equiv\bigvee_{\begin{subarray}{l}
+                            i+j=k\\ 
+                            0\le i\le p\\ 
+                            0\le j\le q
+                            \end{subarray}}
+                   \vlsbr(\th ip\avec1p.\th jq\avec{p+1}n)
+\]
+and $\th0p\avec1p\equiv\ttt$.) General (co)weak\-en\-ing rule instances can be replaced by atomic ones because of Proposition~\ref{PropGenAtPol}. The size bound on $\Gth kln\avec1n$ follows from Proposition~\ref{PropGenAtPol} and Theorem~\ref{TheoQuas}.
+\end{proof}
+
+
