--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -194,8 +194,12 @@ Given a derivation $\Phi$ with associated flow $\phi$, $|\Phi|\leq|\phi|^3$.
 
 \TODO{Ensure that all the normal forms of atomic flows have a corresponding definition for derivations.}
 
+\begin{definition}\label{definition:DerSimpleForm}
+A derivation with associated atomic flow $\phi$ is \emph{in simple form with respect to} (\emph{the atom}) $a$ if $\pi$ is a polarity assignment for $\phi$, such that the edges in $\phi$ mapped to from occurrences of $a$ have a positive polarity, and the subflow of $\phi$ whose edges are mapped to from occurrences of $a$ and $\bar a$ is in simple form with respect to $\pi$.
+\end{definition}
+
 \begin{definition}\label{definition:DerStreamlined}
-A derivation with associated atomic flow $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}) if $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}).
+A derivation with associated atomic flow $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}) if $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}). The derivation is \emph{weakly streamlined with respect to} (\emph{the atom}) $a$, if $\pi$ is a polarity assignment for $\phi$, such that the edges in $\phi$ mapped to from occurrences of $a$ have a positive polarity, and the subflow of $\phi$ whose edges are mapped to from occurrences of $a$ and $\bar a$ is weakly streamlined with respect to $\pi$.
 \end{definition}
 
 \TODO{Add references to Propositions.}
